--- a/ci/assets/css/principal.css
+++ b/ci/assets/css/principal.css
@@ -12,7 +12,6 @@
   }
 
   .bodyCentre {
-    padding-bottom: 2rem;
     margin-left: auto;
     margin-right: auto;
     background: #e7e7e7;
@@ -76,6 +75,12 @@
     margin: auto;
     text-align: center;
   }
+
+  div.centre-page{
+    margin-top: 1rem !important;
+    margin-bottom: 2rem !important;
+    background-color: white;
+  }
                                         /*navBarre*/
 /*=========================================================================================================*/
   #navBarre {
@@ -138,7 +143,6 @@
 
   footer{
     font-size: 1rem;
-    margin-top: 1rem;
     background: no-repeat url("../images/footer/images.png");
     color: ivory;
   }
@@ -147,6 +151,35 @@
 
                                           /*Produits*/
 /*=========================================================================================================*/
-
+.bouton-pannier{
+  text-align: center;
+}
+.carte-produit{
+  width: 15rem;
+}
+#menu-option{
+  width: 100%;
+}
+div#menu{
+  border: 1px solid black;
+  border-radius: 0.5rem;
+  background: whitesmoke;
+}
                                           /*Histoire*/
 /*=========================================================================================================*/
+
+                                          /*Pannier*/
+/*=========================================================================================================*/
+
+td{
+  text-align: center;
+
+  width: 15rem;
+  border-radius: 0.5rem;
+}
+tbody td{
+    height: 10rem;
+}
+.case-total{
+  background-color: rgba(51, 48, 48, 0.322);
+}
