--- a/ci/assets/css/principal.css
+++ b/ci/assets/css/principal.css
@@ -148,6 +148,9 @@
   }
                                           /*Infos*/
 /*=========================================================================================================*/
+div#accordionExample{
+  width: 50rem !important;
+}
 
                                           /*Produits*/
 /*=========================================================================================================*/
@@ -173,9 +176,7 @@ div#menu{
 
 td{
   text-align: center;
-
   width: 15rem;
-  border-radius: 0.5rem;
 }
 tbody td{
     height: 10rem;
@@ -183,3 +184,34 @@ tbody td{
 .case-total{
   background-color: rgba(51, 48, 48, 0.322);
 }
+.close.icon {
+  color: #000;
+  position: absolute;
+  margin-top: 0;
+  margin-left: 0;
+  width: 21px;
+  height: 21px;
+}
+
+.close.icon:before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  width: 21px;
+  height: 1px;
+  background-color: currentColor;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.close.icon:after {
+  content: '';
+  position: absolute;
+  top: 10px;
+  width: 21px;
+  height: 1px;
+  background-color: currentColor;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
